--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-number-format": "^4.8.0",
     "react-scripts": "4.0.3",
     "react-swipeable-views": "^0.14.0",
+    "react-yandex-metrika": "^2.6.0",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.1.2"
   },
